ConfigurationFiles/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-argocd-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: "netflix-argocd.devopscicd.xyz"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
