ConfigurationFiles/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-grafana-ingress
  namespace: prometheus
spec:
  ingressClassName: nginx
  rules:
    - host: "netflix-grafana.devopscicd.xyz"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
